# videoSorter

./: .env.cloud.example  .gitignore  CLOUD_MVP.md  COMMANDS.md  HOMEWORK_README.md  README.md  analyze.py  calibrate.py  champion_cache.json  database.py  debug_scrape.py  embed.py  eval.py  gather_messages.py  homework_data_cleaning.ipynb  main.py  notes.md  process_all.py  pyproject.toml  query.py  questions.py  render.yaml  retry_no_transcript.py  score_clusters.py  transcribe.py
api/: __init__.py  main.py
cloud/: __init__.py  check_setup.py  migrate_supabase.py  ngrok_publish.py  runtime_config.py  vector_store.py
core/: champions.py  database.py  db_paths.py  embedded_vectors.py  env.py  game_registry.py  llm.py  memory_debug.py  youtube_network.py
data/: aoe2_video_urls.txt
docs/: commands.md  deployment.md
pipeline/: ability_enrich.py  ability_scrape.py  analyze.py  aoe2_crossref.py  champion_archetypes.py  champion_crossref.py  consolidate.py  embed.py  guide_analyze.py  guide_transcribe.py  score_clusters.py  stat_scrape.py  transcribe.py
prompts/: __init__.py  aoe2.py  lol.py  shared.py
retrieval/: query.py  questions.py
scrape/: aoe2_import.py  aoe2_pdf_import.py  aoe2_video_import.py  aoe2_wiki_scrape.py  gather_messages.py  grab_sample.py  login_and_save_state.py  main.py  manage_guide_db.py  mobafire_scrape.py  youtube_scrape.py
scripts/: __init__.py  calibrate.py  eval.py  process_all.py  profile_api_query_memory.py  profile_query_memory.py  retry_no_transcript.py
snapshots/: aatrox_after.txt  aatrox_before.txt  dump_guide_insights.py
(+26 files in other folders)
